Fixed bug where current item would be unequipped when clicking settings.  Also hard-coded calcStatsOffense width so it doesn't break the layout when contents change.

--- a/src/main/webapp/styles/gearPlanner.css
+++ b/src/main/webapp/styles/gearPlanner.css
@@ -471,6 +471,10 @@ body.faction-mode-pub .faction-imp
 {
     vertical-align:top;
 }
+#calcStatsOffense
+{
+    width:393px;
+}
 .calc-stats-table-inner
 {
     width:100%;
